--- a/sample2/sample2/sample2.vcxproj.filters
+++ b/sample2/sample2/sample2.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="targetver.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="sample3.h">
+    <ClInclude Include="sample22.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -33,6 +33,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="sample2.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="sample22.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
